# axum-api-test

./: Cargo.toml
src/: adapter.rs  app.rs  lib.rs
src/adapter/: controller.rs  transfer.rs
src/adapter/controller/: customers_controller.rs  index_controller.rs
src/adapter/transfer/: customers_transfer.rs
src/app/: repository.rs  usecase.rs
src/app/repository/: customer_repository.rs
src/app/usecase/: customers_case.rs  index_case.rs
src/domain/entity/: customer.rs
src/framework/startup/: main.rs
